[package]
name = "dream-chain"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
warp = "0.3"
tokio = { version = "1", features = ["full"] }

